--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,8 @@ coil-compose = "2.5.0"
 compose-destinations = "1.9.59"
 core-splashscreen = "1.0.1"
 datastore-preferences = "1.0.0"
+datetime = "0.9.0"
+desugar_jdk_libs = "2.0.4"
 hilt = "2.50"
 hilt-navigation-compose = "1.1.0"
 kotlin = "1.9.22"
@@ -33,6 +35,8 @@ coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil-compose
 compose-destinations = { module = "io.github.raamcosta.compose-destinations:core", version.ref = "compose-destinations" }
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
 dagger-hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hilt" }
+compose-datetime = { module = "io.github.vanpra.compose-material-dialogs:datetime", version.ref = "datetime" }
+desugar_jdk_libs = { module = "com.android.tools:desugar_jdk_libs", version.ref = "desugar_jdk_libs" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
