--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,33 +1,33 @@
 [versions]
-agp = "8.2.2"
-coil-compose = "2.5.0"
-compose-destinations = "1.10.0"
+agp = "8.5.2"
+coil-compose = "2.6.0"
+compose-destinations = "1.10.2"
 core-splashscreen = "1.0.1"
-datastore-preferences = "1.0.0"
+datastore-preferences = "1.1.1"
 datetime = "0.9.0"
 desugar_jdk_libs = "2.0.4"
-hilt = "2.50"
-hilt-navigation-compose = "1.1.0"
-kotlin = "1.9.22"
-core-ktx = "1.12.0"
+hilt = "2.51.1"
+hilt-navigation-compose = "1.2.0"
+kotlin = "2.0.0"
+core-ktx = "1.13.1"
 junit = "4.13.2"
-androidx-test-ext-junit = "1.1.5"
-espresso-core = "3.5.1"
+androidx-test-ext-junit = "1.2.1"
+espresso-core = "3.6.1"
 kotlin-result = "1.1.18"
-kotlinx-datetime = "0.5.0"
-kotlinx-serialization-json = "1.6.2"
-lifecycle-runtime-ktx = "2.7.0"
-activity-compose = "1.8.2"
-compose-bom = "2024.01.00"
-ksp = "1.9.22-1.0.16"
-logging-interceptor = "4.10.0"
-retrofit = "2.9.0"
+kotlinx-datetime = "0.6.0"
+kotlinx-serialization-json = "1.6.3"
+lifecycle-runtime-ktx = "2.8.4"
+activity-compose = "1.9.1"
+compose-bom = "2024.06.00"
+ksp = "2.0.0-1.0.24"
+logging-interceptor = "4.12.0"
+retrofit = "2.11.0"
 retrofit2-kotlinx-serialization-converter = "1.0.0"
 room-runtime = "2.6.1"
 secrets-gradle-plugin = "2.0.1"
 timber = "5.0.1"
-ui-text-google-fonts = "1.6.0"
-material3 = "1.2.0-rc01"
+ui-text-google-fonts = "1.6.8"
+material3 = "1.2.1"
 
 [libraries]
 androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "core-splashscreen" }
@@ -77,3 +77,4 @@ hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlin" }
 serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 secrets-gradle = { id = "com.google.android.libraries.mapsplatform.secrets-gradle-plugin", version.ref = "secrets-gradle-plugin" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
